Actualizacióntituloyweb index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simulador Global 50 con Explicaciones de Sectores</title>
+    <title>Global 50 https://www.dubaifuture.ae/the-global-50</title>
     <style>
         body {
             font-family: Arial, sans-serif;
